added showing operation at previous operand

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
       <div class="calculator">
         <div class="output">
-          <p class="previous">123 +</p>
-          <p class="current">234</p>
+          <p class="previous">Num</p>
+          <p class="current">Num2</p>
         </div>
 
         <button class="span-2" data-action="clear">AC</button>
